# aws-data-lake

./: .gitignore  Makefile  README.md
code/: emitter.py  gen_patients.py  gen_temp.py  pyproject.toml
infra/: athena.tf  cloudwatch.tf  glue.tf  kinesis-delivery-streams.tf  main.tf  s3.tf  variables.tf
