[tool.poetry]
name = "dl"
version = "0.1.0"
description = ""
authors = ["Norbert Kozlowski <nkozlowski@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.26.165"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
